<resources>
     <string name="app_name">Medi-App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Log out of Medi-App</string>
    <string name="placeholdertext">Placeholdertext</string>
    <string name="leave_a_review_topbartext">Medi-App Leave us a review</string>
    <string name="_review_submit_feedback">Submit Feedback</string>
    <string name="reviewbutton_cancel">Cancel</string>
    <string name="reviewbuttonsubmit">Submit</string>
    <string name="review_welcome_textview">Hi, %1$s! \n \n At Medi-App, we value your opinion. Please help us by answering the questions below. Your feedback will remain anonymous and will be used to enhance your Medi-App experience.</string>
    <string name="support_welcome_textview">Hi, %1$s! \n \n Please select whether you would like support from your insurance company or from your GP \n \n Please select an option below to get started.</string>
    <string name="coin_welcome_textview">Hi, %1$s! \n \n Please select whether you would like to pay for your insurance premium or for an upcoming appointment with your GP</string>
    <string name="predict_welcome_textview">Hi, %1$s! \n \n Welcome to Medi-Predict, Here our machine learning algorithms are trained to calculate risk of illness based on your lifestyle and prior medical history that you have shared with your GP</string>

    <string name="medi_app_gp_details">Medi-App GP Details</string>
    <string name="medi_app_medical_information">Medi-App Medical Information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_user_sign_in">Existing User? Sign In</string>
    <string name="medi_app_sign_up">Medi-App - Sign Up</string>
    <string name="please_select_an_option_below_to_get_started">Please select an option below to get started</string>
    <string name="gp_s_name">GP\'s Name</string>
    <string name="select_your_n_insurance_provider">Select your \n insurance provider</string>
    <string name="enter_your_insurance_company">Enter your insurance company</string>
    <string name="please_entername">Please enter the name, contact number and main contact email of your insurance company here. After inputting you can select it from the dropdown menu</string>
    <string name="insruance_cancel">Cancel</string>
    <string name="insurancesubmit">Submit</string>
    <string name="insuranceselect_date">Select date</string>
    <string name="insuranceenddate">Enter your Policys \n End Date</string>
    <string name="insuracestartdateselect_date">Select date</string>
    <string name="enter_your_policy_n_start_date">Enter your Policy \n Start Date</string>
    <string name="enter_your_policy_n_number">Enter your policy \n number</string>
    <string name="policy_number">Policy Number</string>
    <string name="medi_app_insurance_details">Medi-App Insurance Details</string>
    <string name="view_insurance_details">View Insurance Details</string>
    <string name="view_gp_details">View GP Details</string>
    <string name="current_ins_detials_text">This is the current Insurance details we have on file for you, if anything is incorrect you can re-enter these details by clicking \'Amend\' below</string>
    <string name="insurance_provider">Insurance provider</string>
    <string name="textview">TextView</string>
    <string name="below_are_the_details_of_your_gp_n_you_can_change_your_preferred_gp_by_clicking_amend_below">Below are the details of your GP \n You can change your preferred GP by clicking \'Amend\' below</string>
    <string name="amend">Amend</string>
    <string name="medi_app_request_an_expert">Medi-App Request an expert</string>


    <!--    Medi-Predict  -->
    <string name="medi_predict">Medi-Predict</string>
    <string name="disease_prediction">Disease Prediction</string>
    <string name="HeartDisease">Heart_disease</string>
    <string name="alzheimers">Alzheimers</string>
    <string name="heart">Heart</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="resting_bp_mm_hg">Resting BP (mm Hg)</string>
    <string name="serum_cholesterol_mg_dl">Serum Cholesterol (mg/dl)</string>
    <string name="fasting_blood_sugar_mg_dl">Fasting Blood Sugar (mg/dl)</string>
    <string name="resting_ecg">Resting ECG</string>
    <string name="chest_pain_1_4">Chest Pain (1 – 4)</string>
    <string name="enter_the_following_details">Enter the following details</string>
    <string name="max_heart_rate">Max Heart Rate</string>
    <string name="exercise_induced_angina">Exercise Induced Angina</string>
    <string name="major_vessels_coloured_by_flourosopy_0_3">Flourosopy Vessels (0 – 3)</string>
    <string name="sex_0_f_1_m">Sex (0 = F, 1 = M)</string>
    <string name="st_depression">ST Depression</string>
    <string name="peak_exercise_st_segment">Peak Exercise ST Segment</string>
    <string name="thalassemia_3_6_7">Thalassemia (3 / 6 / 7)</string>
    <string name="Heart">Heart</string>
    <string name="Alzheimers">Alzheimers</string>
    <string name="heart_image">Heart image</string>
    <string name="diabetes_image">Diabetes image</string>
    <string name="diabetes">Diabetes</string>
    <string name="brain_image">Brain image</string>
    <string name="Education">Education</string>
    <string name="SocioEconomicStatus">Socio Economic Status</string>
    <string name="MiniMentalStateExam">Mini Mental State Exam</string>
    <string name="Etiv">Est Intracranial Volume</string>
    <string name="Nwbv">Normalised Whole Brain Volume</string>
    <string name="atlasScaleFactor">Atlas Scale Factor</string>
    <string name="DiabetesPedigreeFunction">Diabetes Pedigree Function</string>
    <string name="Pregnancy">Pregnancies</string>
    <string name="Glucose">Glucose</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="SkinThickness">Skin Thickness</string>
    <string name="Insulin">Insulin</string>
    <string name="Bmi">BMI</string>
    <string name="AlzheimersPrediction">Alzheimer\'s Prediction</string>
    <string name="probability_of_developing_alzheimer_s">Probability of developing Alzheimer\'s</string>
    <string name="probability_of_developing_diabetes">Probability of Developing Diabetes</string>
    <string name="DiabetesPrediction">Diabetes Prediction</string>
    <string name="Probability_of_Developing_Alzheimer_s">Probability of Developing Alzheimer\'s Disease</string>
    <string name="RESULT"> % </string>
    <string name="probability_of_developing_HeartDisease">Probability of Developing Heart Disease</string>
    <string name="HeartDiseasePrediction">Heart Disease Prediction</string>
    <string name="select_disease_to_predict">Select disease to predict</string>
    <string name="select_illness_to_predict">Select Illness to Predict</string>
    <string name="enter_the_Following_Details">Enter Details</string>
    <string name="EnterDetails">Enter Details</string>
    <string name="enter_details">Enter Details</string>
    <string name="heart_disease">Heart Disease</string>


</resources>