<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".insurance_details">

    <TextView
        android:id="@+id/topbar_insurance_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/medi_app_insurance_details"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/insurance_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/style_spinner"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/policy_number_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_insurance_provder"
        app:layout_constraintTop_toBottomOf="@+id/topbar_insurance_details"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_insurance_provder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_your_n_insurance_provider"
        app:layout_constraintBottom_toBottomOf="@+id/insurance_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar_insurance_details" />

    <EditText
        android:id="@+id/policy_number_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/policy_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/insurance_spinner"
        app:layout_constraintStart_toStartOf="@+id/insurance_spinner"
        app:layout_constraintTop_toBottomOf="@+id/insurance_spinner" />

    <TextView
        android:id="@+id/policy_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_your_policy_n_number"
        app:layout_constraintBottom_toBottomOf="@+id/policy_number_et"
        app:layout_constraintEnd_toEndOf="@+id/tv_insurance_provder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_insurance_provder"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/policy_start_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_your_policy_n_start_date"
        app:layout_constraintEnd_toEndOf="@+id/policy_number_tv"
        app:layout_constraintStart_toStartOf="@+id/policy_number_tv"
        app:layout_constraintTop_toBottomOf="@+id/policy_number_tv" />

    <TextView
        android:id="@+id/DP_insurance_startdate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/insuracestartdateselect_date"
        app:layout_constraintBottom_toBottomOf="@+id/policy_start_tv"
        app:layout_constraintEnd_toEndOf="@+id/policy_number_et"
        app:layout_constraintStart_toStartOf="@+id/policy_number_et"
        app:layout_constraintTop_toTopOf="@+id/policy_start_tv" />

    <TextView
        android:id="@+id/insurance_end_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/insuranceenddate"
        app:layout_constraintEnd_toEndOf="@+id/policy_start_tv"
        app:layout_constraintStart_toStartOf="@+id/policy_start_tv"
        app:layout_constraintTop_toBottomOf="@+id/policy_start_tv" />

    <TextView
        android:id="@+id/DP_insurance_enddate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/insuranceselect_date"
        app:layout_constraintBottom_toBottomOf="@+id/insurance_end_tv"
        app:layout_constraintEnd_toEndOf="@+id/DP_insurance_startdate_tv"
        app:layout_constraintStart_toStartOf="@+id/DP_insurance_startdate_tv"
        app:layout_constraintTop_toTopOf="@+id/insurance_end_tv" />

    <Button
        android:id="@+id/submit_insurance_dets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/insurancesubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/costinsurance" />

    <Button
        android:id="@+id/insurance_cancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/insruance_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="How much are you paying per month?"
        app:layout_constraintEnd_toEndOf="@+id/insurance_end_tv"
        app:layout_constraintStart_toStartOf="@+id/insurance_end_tv"
        app:layout_constraintTop_toBottomOf="@+id/insurance_end_tv" />

    <EditText
        android:id="@+id/costinsurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="€"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/DP_insurance_enddate_tv"
        app:layout_constraintStart_toStartOf="@+id/DP_insurance_enddate_tv"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

</androidx.constraintlayout.widget.ConstraintLayout>